# ratsitlarm

./: .gitignore  COPYING  Dockerfile.arm64  Makefile  README.md  pyproject.toml
doc/: config.jsonc  query.jsonc
src/: lambda_function.py
src/ratsitlarm/: __init__.py  __main__.py
