[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratsitlarm"
version = "0.0.0"
authors = [
  { name="David Timber", email="dxdt@dev.snart.me" },
]
description = "ratsitlarm"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [ "pyjson5", "boto3", "requests" ]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dxdxdt/ratsitlarm/"
Issues = "https://github.com/dxdxdt/ratsitlarm/issues"
